--- a/manifest.yml
+++ b/manifest.yml
@@ -6,7 +6,7 @@ declared-services:
 applications:
 - services:
   - tone-analyzer-service
-  name: tone-analyzer-demo
+  name: tone-analyzer-nikos
   command: npm start
   path: .
   instances: 2
