--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "express-rate-limit": "^2.1.0",
     "express-secure-only": "^0.2.1",
     "helmet": "^1.3.0",
-    "watson-developer-cloud": "^1.2.5"
+    "watson-developer-cloud": "^1.2.5",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "codecov": "^1.0.1",
